syntax = "proto3";

import "envoy/config/common/tap/v2alpha/common.proto";

import "validate/validate.proto";

package envoy.config.filter.http.tap.v2alpha;
option java_package = "io.envoyproxy.envoy.config.filter.http.tap.v2alpha";

// [#protodoc-title: Tap]
// Tap :ref:`configuration overview <config_http_filters_tap>`.

// Top level configuration for the tap filter.
message Tap {
  // fixfix
  common.tap.v2alpha.CommonExtensionConfig common_config = 1
      [(validate.rules).message.required = true];
}
